# zephyr-mojo

./: README.md  main.py  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
cmake/: zephyr_mojo.cmake
codegen/: backends.py  gen_sys.py  spec.py
docs/: api-reference.md  native-ffi-migration.md  native-sim.md  phase5-ffi-research.md
examples/: README.md  blinky.mojo  channel_demo.mojo  dining_philosophers.mojo  mutex_guard.mojo  native_ffi_demo.mojo  producer_consumer.mojo  thread_demo.mojo
native_sim/: CMakeLists.txt  prj.conf  test_native_sim.mojo  zephyr_mojo_wrapper.c
scripts/: switch_backend.py  validate_native.py
tests/: benchmark_ctypes.mojo  test_imports.mojo  test_native_smoke.mojo  test_smoke.mojo
zephyr/: __init__.mojo  channel.mojo  condvar.mojo  error.mojo  gpio.mojo  logging.mojo  mutex.mojo  object.mojo  queue.mojo  semaphore.mojo  static.mojo  thread.mojo  time.mojo  timer.mojo  work.mojo
zephyr/sync/: __init__.mojo  spinmutex.mojo
zephyr_sys/: __init__.mojo
